Fixed z-index of top nav and side nav components.

--- a/src/app/components/nav-top/nav-top.component.scss
+++ b/src/app/components/nav-top/nav-top.component.scss
@@ -2,7 +2,8 @@
     width: 100%;
     height: 72px;
     padding: 0px 40px;
-    // position: fixed;
+    z-index: 10;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
