--- a/src/app/pages/registerpage/registerpage.component.scss
+++ b/src/app/pages/registerpage/registerpage.component.scss
@@ -10,7 +10,7 @@ input {
 .register {
   width: 100%;
   max-width: 480px;
-  margin-top: 104px;
+  margin-top: 176px;
   padding: 48px 80px;
   border-radius: 8px;
   box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.25);
